Thu Sep 27 17:36:28 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/REAMDE.win32: follow recent changes.

Thu Sep 27 16:01:53 2007  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: fix to output some helpful messages.

Thu Sep 27 15:44:51 2007  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: added.

	* common.mk: fix to use above driver.

	* benchmark/prepare_so_count_words.rb: added.

	* benchmark/bm_so_count_words.rb: fix benchmark process.

Thu Sep 27 15:42:34 2007  Koichi Sasada  <ko1@atdot.net>

	* ext/fiber/fiber.c: modify prototype declaration.
	  [ruby-core:12247]

Thu Sep 27 09:42:50 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (strings, xstring, regexp, dsym): empty strings have
	  US-ASCII encoding.

Thu Sep 27 07:39:13 2007  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/runner.rb (assert_finish): new method.

	* bootstraptest/test_knownbug.rb: add test for [ruby-dev:31866] using
	  assert_finish.

Thu Sep 27 04:46:31 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_associate_index): deal with ASCII compatible
	  flags.

	* encoding.c (rb_enc_check): allow ASCII compatible strings.

	* parse.y (rb_intern_str): use ASCII encoding for ASCII string.

	* string.c (rb_enc_str_coderange): check for code-range.

	* string.c (rb_str_modify): clear code-range flags.

	* string.c (rb_str_hash, rb_str_eql): ASCII compatible strings are
	  comparable.

	* include/ruby/encoding.h: added code-range flags.

Thu Sep 27 04:40:47 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_mark_set): new function to mark keys.

	* marshal.c (struct dump_arg, struct load_arg): added wrappers to mark
	  data and compat_tbl entries.  [ruby-dev:31870]

Thu Sep 27 03:17:41 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_waitpid): no needs to poll.  [ruby-dev:31871]

Wed Sep 26 20:11:46 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_knownbug.rb: remove a fixed test.
