@@ -1,3 +1,7 @@
+Fri Sep 28 12:49:05 2007  Koichi Sasada  <ko1@atdot.net>
+
+	* benchmark/driver.rb: fix file selection algorithm.
+
 Thu Sep 27 17:36:28 2007  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/REAMDE.win32: follow recent changes.
